# finatext

./: .env  .gitignore  Cargo.toml  Dockerfile  address_mixed_test.js  cache_report.md  docker-compose.yml  go.mod  go.sum  index.js  main.go  main.py  mise.toml  package-lock.json  package.json  pyproject.toml  report.md  script.js  test.js
src/: class.js  index.ts  lib.js  main.rs  utils.js
templates/: index.html  index.md
tests/: go_address-access_logs_1000_30s.md  go_address-access_logs_100_30s.md  go_address-access_logs_10_30s.md  go_address-access_logs_500_30s.md  go_address-access_logs_50_30s.md  go_address-mixed_1000_30s.md  go_address-mixed_100_30s.md  go_address-mixed_10_30s.md  go_address-mixed_500_30s.md  go_address-mixed_50_30s.md  go_address?postal_code=1000002_1000_30s.md  go_address?postal_code=1000002_100_30s.md  go_address?postal_code=1000002_10_30s.md  go_address?postal_code=1000002_500_30s.md  go_address?postal_code=1000002_50_30s.md  go_index_1000_30s.md  go_index_100_30s.md  go_index_10_30s.md  go_index_500_30s.md  go_index_50_30s.md  rust_address-access_logs_1000_30s.md  rust_address-access_logs_100_30s.md  rust_address-access_logs_10_30s.md  rust_address-access_logs_500_30s.md  rust_address-access_logs_50_30s.md  rust_address-mixed_1000_30s.md  rust_address-mixed_100_30s.md  rust_address-mixed_10_30s.md  rust_address-mixed_500_30s.md  rust_address-mixed_50_30s.md  rust_address?postal_code=1000002_1000_30s.md  rust_address?postal_code=1000002_100_30s.md  rust_address?postal_code=1000002_10_30s.md  rust_address?postal_code=1000002_500_30s.md  (+26 more)
(+10 files in other folders)
