[package]
name = "finatext"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
dotenvy = "0.15.7"
reqwest = { version = "0.13.4", features = ["json"] }
sea-orm = { version = "1.1.20", features = ["runtime-tokio-native-tls", "sqlx-sqlite", "macros", "sqlx-postgres"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
moka = { version = "0.12", features = ["future"] }